Flan 1.6.1
======================
- Improve performance
- Support for Money and Sign Shops currency (forge)
- Fix unusable admin cmd with FTBRanks if its not defined in Ranks

Flan 1.6.0
======================
- Separate some stuff to make it more api like and to make it into an api jar.
  Breaks compat with any potential mods using the previous system.
- Add ignoredEntities config to always ignore certain entities.
  Like grave mods that add the graves as an entity (e.g. corpse mod).
  Add the corpse entity from that mod to default list
- Add modid support for ignoredBlocks and ignoredEntities.
  Use a modid to affect all things from that mod
- Add FTBRanks support. Permission Nodes are the same

Flan 1.5.4
======================
- Safe read player data so it doesnt crash when the file is wrong
- Fix typo in lang file making listAdminClaims error.
  For already existing lang files replace %1 with %1$s for "listAdminClaims"

Flan 1.5.3
======================
- Add wiki link to help command
- Add shortcut /flan ? displaying the help command
- Make server gui inventory unmodifiable by vanilla methods.
  This inturn makes sure other mods cant take or put items into it
- Fix inspection tool and claiming tool bypassing permission
- Add LIGHTNING permission:
  Decides wether a lightning can set blocks on fire and affect non hostile mobs it hits
- Add scoreboard criteria for tracking various things:
  flan:total_claimblocks: Tracks the total claim blocks of players (normal and additional claimblocks)
  flan:used_claimblocks: Tracks the used claimblocks of players
  flan:free_claimblocks: Tracks the amount a player can use to claim
  flan:claim_number: Tracks the number of claims a player has in total
- Add option to only display part of a claims info with claimInfo

Flan 1.5.2
======================
- Add left click blocks check cause some blocks react to that (dragon egg)
- Fix out of memory error when updating from 1.4.x to 1.5+